# limes-workspace-lens

./: .gitignore  EVAL.md  LICENSE  MANIFEST.in  README.md  RULES.md  SECURITY.md  UPSTREAMS.md  pyproject.toml
.github/workflows/: ci.yml
autoresearch/: README.md
docs/: artifact-schema.md  non-claims-and-safety.md  research-roadmap.md  system-completion-plan.md  trainer-workflow.md
examples/: synthetic_behavior_outputs.jsonl  synthetic_control_outputs.jsonl  synthetic_readouts.json  workspace_audit_spec.json
limes_workspace_lens/: __init__.py  __main__.py  analysis.py  comparison.py  eval_artifacts.py  evidence.py  examples.py  gradient_attribution_runner.py  intervention.py  jlens_adapter.py  manifest.py  reflection.py  schema.py  tokenizer_terms.py
paper/: README.md
public/: README.md
results/: README.md
scripts/: check_install.sh  export_jlens_readouts.py  fit_jlens.py  run_gradient_attribution.py  run_smoke.sh
tests/: test_behavior_control_generators.py  test_comparison_gates.py  test_evidence_bundle.py  test_gradient_attribution_runner.py  test_gradient_attribution_schema.py  test_jlens_adapter.py  test_manifest.py  test_schema_and_reports.py  test_schema_validation_negative.py  test_tokenizer_terms.py
